Modul II - Curs01-Ex1-4

--- a/Curs01/Ex01/index.html
+++ b/Curs01/Ex01/index.html
@@ -4,6 +4,11 @@
 <head>
 
   <title>Media Queries</title>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
+  <!-- am scris !+enter si am copiat randul cu meta content  -->
 
   <link
     rel="stylesheet"
@@ -17,6 +22,10 @@
 </head>
 
 <body>
+
+  <h1>Hi</h1>
+
+  <h2>Hi all!</h2>
 
   <div class="box box-1">
     <h1>01</h1>
@@ -33,6 +42,8 @@
   <div class="box box-5">
     <h1>05</h1>
   </div>
+
+  <h3>Hey</h3>
 
   <div
     class="pixeltab-host"
