--- a/Curs01/Ex02/index.html
+++ b/Curs01/Ex02/index.html
@@ -5,6 +5,17 @@
 
   <title>Picture & srcset</title>
 
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
+  <!-- cu acest meta site e responsive -->
+
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
+
   <link
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
@@ -13,13 +24,32 @@
 
 <body>
 
+  <picture>
+    <source
+      media="(max-width: 576px)"
+      srcset="images/w150.png"
+    >
 
+    <source
+      media="(max-width: 768px)"
+      srcset="images/w420.png"
+    >
 
-  <div
-    class="pixeltab-host"
-    id="html02-01-02"
-  ></div>
-  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
+    <source
+      media="(max-width: 992px)"
+      srcset="images/w820.png"
+    >
+
+    <img
+      src="images/w1900.png"
+      alt="imagine"
+    >
+
+    <div
+      class="pixeltab-host"
+      id="html02-01-02"
+    ></div>
+    <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
 </body>
 
 </html>
