--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -4,6 +4,16 @@
 <head>
 
   <title>Picture & srcset</title>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
+  <!-- cu acest meta site e responsive -->
+
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 
   <link
     rel="stylesheet"
@@ -12,7 +22,27 @@
 </head>
 
 <body>
+  <picture>
+    <source
+      media="(max-width: 600px)"
+      srcset="images/w300.png"
+    >
 
+    <source
+      media="(max-width: 768px)"
+      srcset="images/w500.png"
+    >
+
+    <source
+      media="(max-width: 992px)"
+      srcset="images/w900.png"
+    >
+
+    <img
+      src="images/w1900.png"
+      alt="poza"
+    >
+  </picture>
 
 
   <div
