--- a/Curs02/Ex03/index.html
+++ b/Curs02/Ex03/index.html
@@ -11,7 +11,12 @@
     http-equiv="X-UA-Compatible"
     content="ie=edge"
   >
-  <title>Operatori</title>
+  <title>Interpolare</title>
+
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 
   <link
     rel="stylesheet"
@@ -20,12 +25,12 @@
 </head>
 
 <body>
-  <button>Button1</button>
-  <button>Button2</button>
-  <button>Button3</button>
-  <button>Button4</button>
-  <button>Button5</button>
-
+  <button class="btn-primary">Button1</button>
+  <button class="btn-secondary">Button2</button>
+  <button class="btn-inverted">Button3</button>
+  <button class="btn-inverted-light">Button4</button>
+  <button class="btn-tertiary">Button5</button>
+  <button class="btn-text-gray">Button6</button>
   <div
     class="pixeltab-host"
     id="html02-02-03"
