--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -24,8 +24,9 @@
   </div>
 
   <div class="circles">
-    <div class="circle circle-red">
-      <div class="circle-border-blue"></div>
+
+    <div class="circle-border-blue">
+      <div class="circle circle-red"></div>
     </div>
     <div class="circle circle-green"></div>
     <div class="circle circle-blue"></div>
