--- a/Curs07/Ex02/index2.html
+++ b/Curs07/Ex02/index2.html
@@ -4,28 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta
-    http-equiv="X-UA-Compatible"
-    content="IE=edge"
-  >
-  <meta
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Animations</title>
-
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="ie=edge"
+  >
   <link
     rel="stylesheet"
-    href="css/style3.css"
+    href="css/style2.css"
   >
 
+  <title>Animatii avansate</title>
 </head>
 
 <body>
-  <div class="loader">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
+  <div class="box box-animate2"> </div>
 </body>
 
 </html>
