--- a/Curs07/Ex03/anim1.5.html
+++ b/Curs07/Ex03/anim1.5.html
@@ -11,21 +11,21 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Animations</title>
+  <title>Document</title>
 
   <link
     rel="stylesheet"
-    href="css/style3.css"
+    href="css/style1.5.css"
   >
 
 </head>
 
 <body>
-  <div class="loader">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
+  <span class="loader">Loading...</span>
 </body>
 
 </html>
+
+<!-- cu !+Enter am generat DOCTYPE html -->
+
+<!-- tema ex2 tot aici -->
