--- a/Curs05/Ex02/index.html
+++ b/Curs05/Ex02/index.html
@@ -26,7 +26,7 @@
 <body>
   <main class="container">
     <ul
-      class="row bg-dark text-warning p-0 m-0 list-unstyled align-items-start text-center justify-content-between"
+      class="row bg-dark text-warning mb-0 list-unstyled align-items-start text-center justify-content-between"
       style="height: 200px;"
     >
       <li class="col-2 px-0 py-2 border border-warning">a</li>
@@ -35,6 +35,22 @@
       <!-- px py -padding -->
       <!-- are 12 coloane primul li=2col, 2col spatiu, al doilea li are 4 col etc.-->
     </ul>
+
+    <section
+      class="row bg-secondary align-items-center text-muted text-center justify-content-around"
+      style="height: 200px;"
+    >
+      <article class="col-4 border border-primary">a</article>
+      <article class="col-7 border border-primary">b</article>
+    </section>
+
+    <section
+      class="row bg-danger text-info align-items-end justify-content-end text-end"
+      style="height: 200px;"
+    >
+      <div class="col-6 border border-light">c</div>
+    </section>
+
   </main>
 </body>
 
