--- a/Curs05/Ex03/index.html
+++ b/Curs05/Ex03/index.html
@@ -12,25 +12,30 @@
     content="ie=edge"
   >
   <title>Bootstrap Grid</title>
+
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 </head>
 
 <body>
 
   <div class="container">
     <div class="row">
-      <div class="col">Last</div>
+      <div class="col order-last">Last</div>
       <div class="col">Second</div>
-      <div class="col">First</div>
+      <div class="col order-first">First</div>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col">5</div>
-      <div class="col">4</div>
-      <div class="col">3</div>
-      <div class="col">2</div>
-      <div class="col">1</div>
+      <div class="col order-last">5</div>
+      <div class="col order-4">4</div>
+      <div class="col order-3">3</div>
+      <div class="col order-2">2</div>
+      <div class="col order-first">1</div>
     </div>
   </div>
 
