--- a/Curs05/Ex06/index.html
+++ b/Curs05/Ex06/index.html
@@ -15,14 +15,21 @@
 
   <link
     rel="stylesheet"
+    href="css/style.css"
+  >
+
+  <link
+    rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
 </head>
 
 <body>
-  <div class="box">1</div>
-  <div class="box">2</div>
-  <div class="box">3</div>
+  <div class="box ml-4 ms-4 mt-2 p-4 ml-md-0 ms-md-0 mt-md-0 p-md-0">1</div>
+  <!-- ml-md-0 ms-md-0 inseamna margini 0 -->
+  <div class="box my-2 ml-md-4 ms-md-4 p-md-4">2</div>
+  <div class="box ml-4 ms-4 mt-2 p-2 ml-md-2 ms-md-2 mt-md-2 p-md-2">3</div>
+  <!-- box 3 nu e gata -->
   <div class="box">4</div>
 
   <div
