--- a/Curs05/Ex07/index.html
+++ b/Curs05/Ex07/index.html
@@ -17,12 +17,18 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
+
 </head>
 
 <body>
   <div class="box">1</div>
-  <div class="box">2</div>
-  <div class="box">3</div>
+  <div class="box mx-lg-2 mt-lg-4 pr-lg-4 pe-lg-4">2</div>
+  <div class="box mx-3 mt-4 pr-2 pe-2">3</div>
   <div class="box">4</div>
 
   <div
