--- a/Curs05/Ex10/index.html
+++ b/Curs05/Ex10/index.html
@@ -11,6 +11,15 @@
     http-equiv="X-UA-Compatible"
     content="ie=edge"
   >
+
+  <!-- CSS only -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+    crossorigin="anonymous"
+  >
+
   <title>Alerts</title>
 
   <link
@@ -20,6 +29,39 @@
 </head>
 
 <body>
+  <div
+    class="alert alert-danger"
+    role="alert"
+  >
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </div>
+
+  <div
+    class="alert alert-warning"
+    role="alert"
+  >
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio cupiditate numquam, voluptate enim voluptas
+    porro, sapiente quidem pariatur dolores eaque sequi nostrum, consequatur impedit vitae asperiores qui vel
+    perspiciatis laboriosam!
+  </div>
+
+  <div
+    class="alert alert-success"
+    role="alert"
+  >
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo cumque ipsa culpa tempore quasi ducimus deserunt sequi,
+    eveniet eos amet perspiciatis voluptatum? Hic quas animi quos eveniet omnis.
+  </div>
+
+  <div
+    class="alert alert-dark"
+    role="alert"
+  >
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae aut ea ut quae nemo tenetur!
+  </div>
 
   <div
     class="pixeltab-host"
