--- a/Curs05/Ex11/index.html
+++ b/Curs05/Ex11/index.html
@@ -46,8 +46,18 @@
         </div>
       </article>
 
-      <article>
-        <!-- insert cod flexbox setul 2 -->
+      <article class="border border-dark container d-flex flex-column gap-3 py-3 mt-3">
+        <div class="row justify-content-center">
+          <div class="col-4 bg-info py-3"></div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-4 bg-info py-3"></div>
+        </div>
+
+        <div class="row justify-content-end">
+          <div class="col-4 bg-info py-3"></div>
+        </div>
       </article>
     </section>
 
@@ -73,8 +83,18 @@
           </div>
         </article>
 
-        <article>
-          <!-- insert code offset set 2-->
+        <article class="container border border-dark py-3 mt-3">
+          <div class="row">
+            <div class="col-4 offset-4 bg-warning py-3"></div>
+          </div>
+
+          <div class="row my-3">
+            <div class="col-4 offset-4 bg-warning py-3"></div>
+          </div>
+
+          <div class="row">
+            <div class="col-4 offset-8 bg-warning py-3"></div>
+          </div>
         </article>
       </section>
     </section>
