--- a/Curs05/Ex14/index.html
+++ b/Curs05/Ex14/index.html
@@ -11,21 +11,415 @@
     http-equiv="X-UA-Compatible"
     content="ie=edge"
   >
-  <title>Bootstrap</title>
+  <title>Bootstrap 2.0</title>
 
   <link
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+
+  <!-- CSS only -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+    crossorigin="anonymous"
+  >
 </head>
 
 <body>
+  <form>
+    <header class="container mb-4">
+      <h1 class="text-center text-lg-start">Formular Produs</h1>
+    </header>
 
-  <div
+    <main class="container mb-5">
+      <fieldset class="mb-2">
+        <header>
+          <h2>Produs</h2>
+        </header>
+
+        <section class="row">
+          <div class="col-12 col-lg-6 ">
+            <div class="mb-2">
+              <label
+                for="recipe-image"
+                class="form-label d-block"
+              >Imagine principala *</label>
+
+              <input
+                type="file"
+                name="recipe-image"
+                id="recipe-image"
+                class="form-control"
+                required
+              >
+            </div>
+
+            <div class="col-12 col-lg-6 mb-2 mb-lg-0 d-flex flex-column gap-2">
+              <div class="input-group">
+                <label
+                  for="recipe-author"
+                  class="input-group-text"
+                >Categorie *</label> </label>
+
+                <select
+                  name="recipe-author"
+                  id="recipe-author"
+                  class="form-select"
+                  required
+                >
+                  <option value="">--categorie--</option>
+                  <option value="123">Incaltaminte</option>
+                </select>
+              </div>
+
+              <div class="input-group">
+                <label
+                  for="recipe-author"
+                  class="input-group-text"
+                >Brand</label> </label>
+
+                <select
+                  name="recipe-author"
+                  id="recipe-author"
+                  class="form-select"
+                  required
+                >
+                  <option value="">--brand--</option>
+                  <option value="123">Converse</option>
+                </select>
+              </div>
+
+              <div class="input-group">
+                <label
+                  for="recipe-author"
+                  class="input-group-text"
+                >Furnizor</label> </label>
+
+                <select
+                  name="recipe-author"
+                  id="recipe-author"
+                  class="form-select"
+                  required
+                >
+                  <option value="">--furnizor--</option>
+                  <option value="123">E-bay</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <div class="col-12 col-lg-6 mt-2 mt-lg-0">
+            <div class="input-group mb-2">
+              <label
+                for="recipe-name"
+                class="input-group-text"
+              >Numele produsului *</label>
+
+              <input
+                type="text"
+                name="recipe-name"
+                id="recipe-name"
+                class="form-control"
+                placeholder="Numele produsului *"
+                required
+              >
+            </div>
+
+            <div class="input-group mb-2">
+              <label
+                for="recipe-long-description"
+                class="input-group-text"
+              >Descriere lunga *</label>
+
+              <textarea
+                name="recipe-long-description"
+                id="recipe-long-description"
+                cols="30"
+                rows="8"
+                class="form-control"
+                placeholder="Descriere lunga *"
+                required
+              ></textarea>
+            </div>
+
+            <div class="input-group">
+              <label
+                for="recipe-short-description"
+                class="input-group-text"
+              >Descriere scurta *</label>
+
+              <textarea
+                name="recipe-short-description"
+                id="recipe-short-description"
+                cols="30"
+                class="form-control"
+                placeholder="Descriere scurta *"
+                rows="4"
+                required
+              ></textarea>
+            </div>
+          </div>
+        </section>
+
+
+
+        <fieldset class="mb-2">
+          <header>
+            <h2>Pret</h2>
+          </header>
+
+          <section class="row">
+            <div class="col-12 mb-2">
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  name="author-enabled"
+                  id="author-enabled"
+                  class="form-check-input"
+                >
+
+                <label for="author-enabled">Afiseaza oferta pe produs</label>
+              </div>
+            </div>
+
+            <div class="col-12 col-lg-6 mb-2 mb-lg-0 d-flex flex-column gap-2">
+              <div class="input-group">
+                <label
+                  for="author-name"
+                  class="input-group-text"
+                >Pret *</label>
+
+                <input
+                  type="text"
+                  name="author-name"
+                  id="author-name"
+                  class="form-control"
+                  placeholder="Pret *"
+                  required
+                >
+              </div>
+            </div>
+
+            <div class="col-12 col-lg-6">
+
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  name="author-enabled"
+                  id="author-enabled"
+                  class="form-check-input"
+                >
+
+                <label for="author-enabled">Afiseaza pret redus</label>
+              </div>
+
+              <div class="input-group">
+                <label
+                  for="recipe-short-description"
+                  class="input-group-text"
+                >Pret redus</label>
+
+                <textarea
+                  name="recipe-short-description"
+                  id="recipe-short-description"
+                  cols="30"
+                  class="form-control"
+                  placeholder="Pret redus"
+                  rows="1"
+                  required
+                ></textarea>
+              </div>
+            </div>
+          </section>
+        </fieldset>
+
+
+
+
+
+
+
+        <fieldset class="mb-2">
+          <header>
+            <h2>Brand (optional)</h2>
+          </header>
+
+          <section class="row">
+            <div class="col-12 mb-2">
+              <div class="form-check form-switch">
+                <input
+                  type="checkbox"
+                  name="author-enabled"
+                  id="author-enabled"
+                  class="form-check-input"
+                  checked
+                >
+
+                <label for="author-enabled">Adauga brand</label>
+              </div>
+            </div>
+
+            <div class="col-12 col-lg-6 mb-2 mb-lg-0 d-flex flex-column gap-2">
+              <div class="input-group">
+                <label
+                  for="author-name"
+                  class="input-group-text"
+                >Nume brand</label>
+
+                <input
+                  type="text"
+                  name="author-name"
+                  id="author-name"
+                  class="form-control"
+                  placeholder="Nume brand"
+                  required
+                >
+              </div>
+
+              <div class="input-group">
+                <label
+                  for="recipe-short-description"
+                  class="input-group-text"
+                >Descriere brand</label>
+
+                <textarea
+                  name="recipe-short-description"
+                  id="recipe-short-description"
+                  cols="30"
+                  class="form-control"
+                  placeholder="Descriere brand"
+                  rows="4"
+                  required
+                ></textarea>
+              </div>
+
+            </div>
+
+            <div class="col-12 col-lg-6">
+              <div class="input-group">
+                <label
+                  for="recipe-short-description"
+                  class="input-group-text"
+                >Adresa brand</label>
+
+                <textarea
+                  name="recipe-short-description"
+                  id="recipe-short-description"
+                  cols="30"
+                  class="form-control"
+                  placeholder="Adresa brand"
+                  rows="4"
+                  required
+                ></textarea>
+              </div>
+            </div>
+          </section>
+        </fieldset>
+
+        <fieldset class="mb-2">
+          <header>
+            <h2>Furnizor (optional)</h2>
+          </header>
+
+          <section class="row">
+            <div class="col-12 mb-2">
+              <div class="form-check form-switch">
+                <input
+                  type="checkbox"
+                  name="author-enabled"
+                  id="author-enabled"
+                  class="form-check-input"
+                  checked
+                >
+
+                <label for="author-enabled">Adauga furnizor</label>
+              </div>
+            </div>
+
+            <div class="col-12 col-lg-6 mb-2 mb-lg-0 d-flex flex-column gap-2">
+              <div class="input-group">
+                <label
+                  for="author-name"
+                  class="input-group-text"
+                >Nume furnizor</label>
+
+                <input
+                  type="text"
+                  name="author-name"
+                  id="author-name"
+                  class="form-control"
+                  placeholder="Nume furnizor"
+                  required
+                >
+              </div>
+
+              <div class="input-group">
+                <label
+                  for="recipe-short-description"
+                  class="input-group-text"
+                >Descriere furnizor</label>
+
+                <textarea
+                  name="recipe-short-description"
+                  id="recipe-short-description"
+                  cols="30"
+                  class="form-control"
+                  placeholder="Descriere furnizor"
+                  rows="4"
+                  required
+                ></textarea>
+              </div>
+
+            </div>
+
+            <div class="col-12 col-lg-6">
+              <div class="input-group">
+                <label
+                  for="recipe-short-description"
+                  class="input-group-text"
+                >Adresa furnizor</label>
+
+                <textarea
+                  name="recipe-short-description"
+                  id="recipe-short-description"
+                  cols="30"
+                  class="form-control"
+                  placeholder="Adresa furnizor"
+                  rows="4"
+                  required
+                ></textarea>
+              </div>
+            </div>
+          </section>
+        </fieldset>
+
+    </main>
+
+    <footer class="container pb-5">
+      <fieldset class="text-center">
+        <button
+          type="reset"
+          class="btn btn-outline-danger btn-lg"
+          title="Reseteaza tot"
+        >Reseteaza tot</button>
+
+        <button
+          type="submit"
+          title="Salveaza Produs"
+          class="btn btn-primary btn-lg"
+        >Salveaza produs</button>
+      </fieldset>
+    </footer>
+  </form>
+
+  <!-- <div
     class="pixeltab-host"
-    id="html02-05-14"
+    id="html02-05-13"
   ></div>
-  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
+  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script> -->
 </body>
 
 </html>
